parslers-benchmark/src/tests/invalid/semanticErr/function/functionBadArgUse.wacc
# function parameter misuse

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(int x) is
    bool b = x && true ;
		return 0
	end
  int x = call f(0) 
end
	
